--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">12/13</div>
+            <div class="date">12/13/2024</div>
             <div class="item">
                 <span>USACO-1904</span>
                 <span class="pass">(pass, 900 score)</span>
@@ -97,7 +97,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">12/12</div>
+            <div class="date">12/12/2024</div>
             <div class="item">
                 <span>USACO-577A</span>
                 <span class="pass">(pass, 1000 score)</span>
@@ -105,7 +105,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">12/11</div>
+            <div class="date">12/11/2024</div>
             <div class="item">
                 <span>Worked on Math Olympiad website</span>
                 <span>(adjusted it for 2024-2025)</span>
@@ -113,7 +113,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">12/10</div>
+            <div class="date">12/10/2024</div>
             <div class="item">
                 <span>USACO-2047</span>
                 <span class="pass">(pass, 900 score)</span>
@@ -121,7 +121,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">12/09</div>
+            <div class="date">12/09/2024</div>
             <div class="item">
                 <span>USACO-250A</span>
                 <span class="pass">(pass, 1000 score)</span>
@@ -129,7 +129,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">12/08</div>
+            <div class="date">12/08/2024</div>
             <div class="item">
                 <span>USACO-1996</span>
                 <span class="pass">(pass, 800 score)</span>
@@ -137,7 +137,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">12/07</div>
+            <div class="date">12/07/2024</div>
             <div class="item">
                 <span>USACO-1892</span>
                 <span class="pass">(pass, 800 score)</span>
@@ -145,7 +145,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">12/06</div>
+            <div class="date">12/06/2024</div>
             <div class="item">
                 <span>USACO-1993</span>
                 <span class="pass">(pass, 800 score)</span>
@@ -153,7 +153,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">12/05</div>
+            <div class="date">12/05/2024</div>
             <div class="item">
                 <span>USACO-1985</span>
                 <span class="pass">(pass, 800 score)</span>
@@ -165,7 +165,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">12/04</div>
+            <div class="date">12/04/2024</div>
             <div class="item">
                 <span>USACO-1923</span>
                 <span class="working">(working, 1100 score)</span>
@@ -177,7 +177,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">12/03</div>
+            <div class="date">12/03/2024</div>
             <div class="item">
                 <span>USACO-1913</span>
                 <span class="working">(working, 1000 score)</span>
@@ -185,7 +185,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">12/02</div>
+            <div class="date">12/02/2024</div>
             <div class="item">
                 <span>USACO-2037</span>
                 <span class="pass">(pass, 800 score)</span>
@@ -197,7 +197,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">12/01</div>
+            <div class="date">12/01/2024</div>
             <div class="item">
                 <span>Backpropagation</span>
                 <span>(Added decay rate, experimented)</span>
@@ -205,7 +205,7 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">11/30</div>
+            <div class="date">11/30/2024</div>
             <div class="item">
                 <span>USACO-1811</span>
                 <span class="pass">(pass, 1000 score)</span>
@@ -216,21 +216,21 @@
         </div>
 
         <div class="log-entry">
-            <div class="date">11/29</div>
+            <div class="date">11/29/2024</div>
             <div class="item">
                 <span>Joshua Tree NP, no coding</span>
             </div>
         </div>
 
         <div class="log-entry">
-            <div class="date">11/28</div>
+            <div class="date">11/28/2024</div>
             <div class="item">
                 <span>Joshua Tree NP, no coding</span>
             </div>
         </div>
 
         <div class="log-entry">
-            <div class="date">11/27</div>
+            <div class="date">11/27/2024</div>
             <div class="item">
                 <span>Joshua Tree NP, no coding</span>
             </div>
