--- a/index.html
+++ b/index.html
@@ -87,6 +87,29 @@
         <div class="header">
             <h1>Coding Progress Log</h1>
         </div>
+        <div class="log-entry">
+            <div class="date">12/13/2024</div>
+            <div class="item">
+                <span><a href="https://usaco.org/index.php?page=viewproblem2&cpid=1251">USACO 2022 problem 1</a></span>
+                <span>(pass, bronze)</span>
+            </div>
+        </div>
+
+        <div class="log-entry">
+            <div class="date">12/13/2024</div>
+            <div class="item">
+                <span>USACO Competition</span>
+                <span>(Bronze)</span>
+            </div>
+        </div>
+        
+        <div class="log-entry">
+            <div class="date">12/13/2024</div>
+            <div class="item">
+                <span>USACO Competition</span>
+                <span>(Bronze)</span>
+            </div>
+        </div>
 
         <div class="log-entry">
             <div class="date">12/13/2024</div>
